--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@nrwl/angular": "^14.0.0",
     "@wangeditor/editor": "^5.1.23",
     "moment": "^2.29.3",
     "ng-zorro-antd": "^14.0.0",
