--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -18,19 +18,20 @@
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
-    "@nrwl/angular": "^14.3.0",
-    "@wangeditor/editor": "^5.1.23",
     "@fullcalendar/angular": "^6.1.10",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/list": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "@nrwl/angular": "^14.3.0",
+    "@wangeditor/editor": "^5.1.23",
     "moment": "^2.29.3",
     "ng-zorro-antd": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "wangeditor-for-angular": "^15.0.4",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
