--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -18,14 +18,14 @@
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
-    "@nrwl/angular": "^14.3.0",
-    "@wangeditor/editor": "^5.1.23",
     "@fullcalendar/angular": "^6.1.10",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/list": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "@nrwl/angular": "^14.3.0",
+    "@wangeditor/editor": "^5.1.23",
     "moment": "^2.29.3",
     "ng-zorro-antd": "^14.0.0",
     "rxjs": "~7.5.0",
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "^14.2.13",
     "@angular/cli": "~14.2.13",
     "@angular/compiler-cli": "^14.3.0",
+    "@angular/localize": "^14.3.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
